--- a/Billed-app-FR-Front-main/package.json
+++ b/Billed-app-FR-Front-main/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --noStackTrace"
   },
   "jest": {
     "verbose": false,
@@ -22,6 +22,7 @@
     "global": "^4.4.0",
     "jquery": "^3.5.1",
     "path": "^0.12.7"
+    
   },
   "devDependencies": {
     "@babel/preset-env": "^7.10.4",
